# nyayai

./: .env.example  .gitignore  README.md  bnss_sample.txt  bnss_sample_end.txt  data.dvc  docker-compose.yml  pyproject.toml  requirements.txt  test_parser.py
.github/: pull_request_template.md
api/: dependencies.py  main.py
api/routes/: health.py  jobs.py  upload.py
api/schemas/: errors.py  response.py  upload.py
config/: constants.py  log_config.py  settings.py
corpus/: chunker.py  embeddings.py  ingest.py  ingest_corpus.py  parser.py  pdf_utils.py  schemas.py  search.py  uploader.py
corpus/data/: crpc_to_bnss_mapping.json  ipc_bns_mapping.py  ipc_to_bns_mapping.json
corpus/parsers/: base.py  bns.py  bnss.py  constitution.py  (+2 more)
docs/: Folder_structure.md  PHASE_1.md  PHASE_2.md  Phase Explanation.md  api.md  architecture.md  corpus.md  model.md  roadmap.md
frontend/: index.html  package-lock.json  package.json
model/: predict.py  preprocess.py  schemas.py
ocr/: native_extractor.py  pipeline.py  router.py  surya_extractor.py  tokens.py
pipeline/: deduplicate.py  engine.py  merger.py
renderer/: annotate_pdf.py  colors.py  html_report.py  report.py
reviews/: review of phase 3 - corpus section.md  review of pipeline and orchestration.md
rules/: citation_checker.py  entity_checker.py
scripts/: benchmark.py  download_models.py  generate_data.py  ingest_corpus.py  smoke_test.py  test_deps.py  test_gpu.py
services/: analysis.py  storage.py
tests/: test_parser.py  test_renderer.py
train/: collator.py  dataset.py  evaluate.py  metrics.py  train.py
utils/: bbox.py
workers/: celery_app.py  queues.py  tasks.py
(+11 files in other folders)
